--- a/index.qmd
+++ b/index.qmd
@@ -9,38 +9,103 @@ format: revealjs
 
 ## Overview
 
--   Data Science applications in Biology
+-   Data Science in the biosciences
 
 -   Option module: Bioinformatics Group Project
 
 -   60 credit Research Projects in Biology
 
-# Data Science in Biology
+# Data Science in the biosciences
 
-## Data Science in Biology
+## Data Science in the biosciences
+
+Data Science or Bioinformatics?
 
 ::: incremental
+-   More or less interchangeable
+
+-   Data Science is a broader term
+
+-   Bioinformatics more of a focus on sequencing data
+
+-   because that's what came first!
+:::
+
+## Data Science in the biosciences
+
+-   High-throughput sequencing
+
+-   Central Dogma: DNA makes RNA, and RNA makes protein
+
+![The Central Dogma](images/central-dogma.png){fig-alt="DNA is transcribed to RNA which is translated to proteins"}
+
+-   We can sequence DNA, RNA and protein in bulk, single cell and spatially
+
+## Data Science in the biosciences
+
+Typical omics workflow
+
+::: incremental
+-   DNA or RNA is extracted from samples
+
+-   It is chopped up into 'small' pieces and sequenced
+
+-   Sequencing is not perfect - some based are "miscalled"
+
+-   The data are files of "reads" i.e., sequences with a quality score
+
+-   Text files e.g., FASTQ
+:::
+
+## Data Science in the biosciences
+
+[FASTQ format](https://en.wikipedia.org/wiki/FASTQ_format)
+
+## Data Science in the biosciences
+
+-   Technologies
+
+-   long reads or short reads
+
+## Sequencing Technologies
+
+::: {style="font-size: 70%;"}
+| Platform        | Generation            | Read length                                       | Sequence Accuracy | Other advantages                                                                    | Other disadvantages                                                                               |
+|-----------------|-----------------------|---------------------------------------------------|-------------------|-------------------------------------------------------------------------------------|---------------------------------------------------------------------------------------------------|
+| Illumina        | second-generation NGS | Short 150 - 300 bp                                | high              | Relatively cheap, Can sequence fragmented DNA                                       | Not suitable for sequences with many repetitive elements, methylation signatures, Relatively slow |
+| PacBio          | third-generation NGS  | Long 13,000 - 20,000 bp with a max of 300,000     | low               | Easier library preparation, suitable for methylation signatures, Quick              | Relatively expensive                                                                              |
+| Oxford Nanopore | third-generation NGS  | Long 10,000 - 30,000 bp with a max of 2.3 million | low               | portability, Easier library preparation, Quick, suitable for methylation signatures |                                                                                                   |
 :::
 
 ## 
 
 ::: incremental
+-   Quality control of raw reads: trimming and filtering
+
+-   Assembly de novo or align to a reference
+
+-   Counts of reads to measure expression/abundance
+
+-   Normalisation of counts
+
+-   Data visualisation: dimension reduction, clustering
+
+-   Statistical analysis: differential expression/abundance, gene set enrichment
+
+-   Data visualisation: Volcano plots, heatmaps, networks
 :::
 
-## 
+## Data Science in the biosciences
 
-::: incremental
-:::
+-   Imaging
 
-## 
+-   Microscopy including live cyte, MRI, CT, PET, Satellite
 
-::: incremental
-:::
+-   Mechanistic understanding, Monitoring, diagnosis (classification), prognosis (prediction)
 
-## 
+## Data Science in the biosciences
 
-::: incremental
-:::
+-   [Kaggle](https://www.kaggle.com/)
 
 # Bioinformatics Group Project
 
@@ -75,7 +140,22 @@ Work together to produce a revised version utilising novel single cell RNA-seq d
 
 ## Research Projects in Biology
 
-::: incremental
+::: {style="font-size: 70%;"}
++---------------------------------------------------------------------------------------------------------+---------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------+
+| [Kanchon Dasmahapatra](https://www.york.ac.uk/biology/research/ecology-evolution/kanchon-dasmahapatra/) | [Gavin H Thomas](https://www.york.ac.uk/biology/research/biochemistry-biophysics/gavin-h-thomas/) | [Katherine Denby](https://www.york.ac.uk/biology/research/bioinformatics-biosystems/katherine-denby/) |
+|                                                                                                         |                                                                                                   |                                                                                                       |
+| Genomics for understanding speciation                                                                   | How human pathogens use the host-derived molecule sialic acid                                     | Plant-pathogen interactions using high-throughput sequencing data                                     |
+|                                                                                                         |                                                                                                   |                                                                                                       |
+| ![](images/Kanchon%20Dasmahapatra.png)                                                                  | ![](images/G_Thomas.jpg)                                                                          |  ![](images/Katherine%20Denby218x218.jpg)                                                             |
++---------------------------------------------------------------------------------------------------------+---------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------+
+| [Daphne Ezer](https://www.york.ac.uk/biology/our-staff/ezerdaphne/)                                     | [Katie E. Davis](https://www.york.ac.uk/biology/our-staff/katie-davis/)                           | [James Chong](https://www.york.ac.uk/biology/research/biochemistry-biophysics/james-chong/)           |
+|                                                                                                         |                                                                                                   |                                                                                                       |
+| Complex experimental designs in sequence data                                                           | Biodiversity change in the fossil record                                                          | Microbiomes in anaerobic digestors                                                                    |
+|                                                                                                         |                                                                                                   |                                                                                                       |
+| ![](images/daphne%20ezer.jpg)                                                                           | ![]()![](images/KDavis-218.jpg)                                                                   | ![](images/james-chong-218x286.jpg)                                                                   |
++---------------------------------------------------------------------------------------------------------+---------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------+
+|                                                                                                         |                                                                                                   |                                                                                                       |
++---------------------------------------------------------------------------------------------------------+---------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------+
 :::
 
 ## 
