--- a/index.qmd
+++ b/index.qmd
@@ -7,6 +7,22 @@ format: revealjs
 
 ## Who am I?
 
+-   Computational Biologist
+
+    -   computational reproducibility
+    -   omics: stem cells, cancer, development, anaerobic digestion
+    -   text analysis to understand scientific literature
+
+-   Director of [Cloud-SPAN](https://cloud-span.york.ac.uk/) which trains researchers run 'omics analyses on cloud-based HPC
+-   MSc Bioinformatics Programme lead
+-   [RForwards](https://forwards.github.io/), member of core team and teaching lead
+
+
+::: {style="font-size: 50%;"}
+ORCID: [0000-0002-1358-8275](https://orcid.org/0000-0002-1358-8275) GitHub: [3mmaRand](https://github.com/3mmaRand) twitter:  [@er13_r](https://twitter.com/er13_r) Mastodon: [@3mma@mastodon.social](https://mastodon.social/deck/@3mma)
+
+:::
+
 ## Overview
 
 -   Data Science in the biosciences
@@ -54,30 +70,28 @@ Typical omics workflow
 
 -   The data are files of "reads" i.e., sequences with a quality score
 
--   Text files e.g., FASTQ
+-   Text files e.g., [FASTQ format](https://en.wikipedia.org/wiki/FASTQ_format)
 :::
 
 ## Data Science in the biosciences
 
-[FASTQ format](https://en.wikipedia.org/wiki/FASTQ_format)
-
-## Data Science in the biosciences
-
--   Technologies
+Technologies
 
 -   long reads or short reads
 
-## Sequencing Technologies
 
 ::: {style="font-size: 70%;"}
-| Platform        | Generation            | Read length                                       | Sequence Accuracy | Other advantages                                                                    | Other disadvantages                                                                               |
-|-----------------|-----------------------|---------------------------------------------------|-------------------|-------------------------------------------------------------------------------------|---------------------------------------------------------------------------------------------------|
-| Illumina        | second-generation NGS | Short 150 - 300 bp                                | high              | Relatively cheap, Can sequence fragmented DNA                                       | Not suitable for sequences with many repetitive elements, methylation signatures, Relatively slow |
-| PacBio          | third-generation NGS  | Long 13,000 - 20,000 bp with a max of 300,000     | low               | Easier library preparation, suitable for methylation signatures, Quick              | Relatively expensive                                                                              |
-| Oxford Nanopore | third-generation NGS  | Long 10,000 - 30,000 bp with a max of 2.3 million | low               | portability, Easier library preparation, Quick, suitable for methylation signatures |                                                                                                   |
++-----------------+---------------------------------------------------+-------------------+
+| Platform        | Read length                                       | Sequence Accuracy |
++=================+===================================================+===================+
+| Illumina        | Short 150 - 300 bp                                | high              |
++-----------------+---------------------------------------------------+-------------------+
+| PacBio          | Long 13,000 - 20,000 bp with a max of 300,000     | low               |
++-----------------+---------------------------------------------------+-------------------+
+| Oxford Nanopore | Long 10,000 - 30,000 bp with a max of 2.3 million | low               |
++-----------------+---------------------------------------------------+-------------------+
 :::
-
-## 
+## Typical workflow
 
 ::: incremental
 -   Quality control of raw reads: trimming and filtering
@@ -103,6 +117,12 @@ Typical omics workflow
 
 -   Mechanistic understanding, Monitoring, diagnosis (classification), prognosis (prediction)
 
+
+## Data Science in the biosciences
+
+-   integrating information from a variety omics, imaging and other sources
+
+
 ## Data Science in the biosciences
 
 -   [Kaggle](https://www.kaggle.com/)
@@ -119,7 +139,9 @@ Typical omics workflow
 
 -   [Group Project - BIO00069M](https://www.york.ac.uk/students/studying/manage/programmes/module-catalogue/module/BIO00069M/latest)
 
-## Module summary
+## Bioinformatics Group Project
+
+Module summary
 
 -   You will carry out a research project in a small team
 
@@ -130,32 +152,61 @@ Typical omics workflow
 
 -   Assessment: 4000W Scientific Report
 
-## The project Ara-BOX-cis v2
+## Bioinformatics Group Project
+
+The project Ara-BOX-cis v2
 
 [Ara-BOX-cis](https://araboxcis.org/) is A G-box regulatory network for a single cell developmental atlas
 
-Work together to produce a revised version utilising novel single cell RNA-seq data to identify subsets of the gene network that are relevant at different developmental stages and cell types.
+-   Work together to produce a revised version 
+
+-   Novel single cell RNA-seq data to identify subsets of the gene network that are relevant at different developmental stages and cell types.
+
+
+::: {style="font-size: 50%;"}
+Daphne Ezer, Samuel J.K. Shepherd, Anna Brestovitsky, Patrick Dickinson, Sandra Cortijo, Varodom Charoensawan, Mathew S. Box, Surojit Biswas, Katja E. Jaeger, Philip A. Wigge, The G-Box Transcriptional Regulatory Code in Arabidopsis, Plant Physiology, Volume 175, Issue 2, October 2017, Pages 628–640, <https://doi.org/10.1104/pp.17.01086>
+:::
+
+## Bioinformatics Group Project
+
+
+[background](biology-gp-proj.pdf)
+
 
 # Research Projects in Biology
 
 ## Research Projects in Biology
 
-::: {style="font-size: 70%;"}
+::: {style="font-size: 50%;"}
 +---------------------------------------------------------------------------------------------------------+---------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------+
 | [Kanchon Dasmahapatra](https://www.york.ac.uk/biology/research/ecology-evolution/kanchon-dasmahapatra/) | [Gavin H Thomas](https://www.york.ac.uk/biology/research/biochemistry-biophysics/gavin-h-thomas/) | [Katherine Denby](https://www.york.ac.uk/biology/research/bioinformatics-biosystems/katherine-denby/) |
 |                                                                                                         |                                                                                                   |                                                                                                       |
 | Genomics for understanding speciation                                                                   | How human pathogens use the host-derived molecule sialic acid                                     | Plant-pathogen interactions using high-throughput sequencing data                                     |
 |                                                                                                         |                                                                                                   |                                                                                                       |
-| ![](images/Kanchon%20Dasmahapatra.png)                                                                  | ![](images/G_Thomas.jpg)                                                                          |  ![](images/Katherine%20Denby218x218.jpg)                                                             |
+| ![](images/Kanchon%20Dasmahapatra.png)                                                                  | ![](images/G_Thomas.jpg)                                                                          | ![](images/Katherine%20Denby218x218.jpg)                                                              |
 +---------------------------------------------------------------------------------------------------------+---------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------+
 | [Daphne Ezer](https://www.york.ac.uk/biology/our-staff/ezerdaphne/)                                     | [Katie E. Davis](https://www.york.ac.uk/biology/our-staff/katie-davis/)                           | [James Chong](https://www.york.ac.uk/biology/research/biochemistry-biophysics/james-chong/)           |
 |                                                                                                         |                                                                                                   |                                                                                                       |
-| Complex experimental designs in sequence data                                                           | Biodiversity change in the fossil record                                                          | Microbiomes in anaerobic digestors                                                                    |
+| Complex experimental designs in sequencing                                                              | Biodiversity change in the fossil record                                                          | Microbiomes in anaerobic digestors                                                                    |
 |                                                                                                         |                                                                                                   |                                                                                                       |
-| ![](images/daphne%20ezer.jpg)                                                                           | ![]()![](images/KDavis-218.jpg)                                                                   | ![](images/james-chong-218x286.jpg)                                                                   |
-+---------------------------------------------------------------------------------------------------------+---------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------+
-|                                                                                                         |                                                                                                   |                                                                                                       |
+| ![](images/daphne%20ezer.jpg)                                                                           | ![](images/KDavis-218.jpg)                                                                        | ![](images/james-chong-218x286.jpg)                                                                   |
 +---------------------------------------------------------------------------------------------------------+---------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------+
 :::
 
-## 
+## Research Projects in Biology
+
+::: {style="font-size: 50%;"}
++--------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------+-----------------------------------------------------------------------+
+| [Sean Meaden](https://www.york.ac.uk/biology/our-staff/sean-meaden/#profile-content) | [Noémie Hamilton](https://www.york.ac.uk/biology/our-staff/dr-no%C3%A9mie-hamilton/#tab-2)    | [Andrew Mason](https://www.york.ac.uk/biology/our-staff/masonandrew/) |
+|                                                                                      |                                                                                               |                                                                       |
+| Metagenomics to describe the distribution of CRISPR                                  | Therapies for leukodystrophies                                                                | Sequencing data to understand carcinogenesis and retroviruses         |
+|                                                                                      |                                                                                               |                                                                       |
+| ![](images/Sean-Meaden-profile-218px.jpg)                                            | ![](images/Noamie-Hamiltion-218px.jpg)                                                        | ![](images/AndrewMason218.jpg)                                        |
++--------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------+-----------------------------------------------------------------------+
+|                                                                                      | [Daniel Jeffares](https://www.york.ac.uk/biology/research/ecology-evolution/daniel-jeffares/) |                                                                       |
+|                                                                                      |                                                                                               |                                                                       |
+|                                                                                      | Molecular epidemiology and quantitative genetics of disease-causing microbes                  |                                                                       |
+|                                                                                      |                                                                                               |                                                                       |
+|                                                                                      | ![](images/Daniel-Jeffares-218.jpg)                                                           |                                                                       |
++--------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------+-----------------------------------------------------------------------+
+:::
